# Renderer-Interface

./: CMakeLists.txt  RendererInterfaceConfig.cmake.in
cmake_config/presets/: ClangLinuxPresets.json  GCCLinuxPresets.json  MSVCWindowsPresets.json
include/: RendererInterface.h
